<resources>
    <string name="app_name">PawSwipe</string>
    <string name="correo_electronico" translatable="false">Correo electrónico</string>
    <string name="contrase_a" translatable="false">Contraseña</string>
    <string name="has_olvidado_la_contrase_a" translatable="false">¿Has olvidado la contraseña?</string>
    <string name="iniciar_sesi_n" translatable="false">Iniciar sesión</string>
    <string name="crear_cuenta" translatable="false">Crear cuenta</string>
    <string name="restablecer_contrasea" translatable="false">Por favor introduzca su dirección de correo electrónico para recibir un enlace de restablecimiento de contraseña.</string>
    <string name="restablecer_contrase_a" translatable="false">Restablecer contraseña</string>
    <string name="nombre_completo" translatable="false">Nombre completo</string>
    <string name="nombre_de_usuario" translatable="false">Nombre de usuario</string>
    <string name="registrarse" translatable="false">Registrarse</string>
    <string name="terminos_condiciones" translatable="false">He leido y acepto los terminos y condiciones</string>
    <string name="fecha_de_nacimiento" translatable="false">Fecha de nacimiento</string>
    <string name="buscar" translatable="false">Buscar</string>
    <string name="siguiente" translatable="false">Siguiente</string>
    <string name="nombre_mascota" translatable="false">Nombre perfil mascota</string>
    <string name="descripcion_mascota" translatable="false">Descripción</string>
    <string name="crear_perfil_mascota" translatable="false">Crear perfil mascota</string>
    <string name="server_ip" translatable="false">192.168.1.139</string>

    <string-array name="meses">
        <item>mes</item>
        <item>enero</item>
        <item>febrero</item>
        <item>marzo</item>
        <item>abril</item>
        <item>mayo</item>
        <item>junio</item>
        <item>julio</item>
        <item>agosto</item>
        <item>septiembre</item>
        <item>octubre</item>
        <item>noviembre</item>
        <item>diciembre</item>
    </string-array>

    <string-array name="dias">
        <item>dia</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>
    <string-array name="years">
        <item>año</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="mensajes">Mensajes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>